beta icon alignment fixed for mobile

--- a/src/client/styles/components/_header.scss
+++ b/src/client/styles/components/_header.scss
@@ -17,6 +17,10 @@
 	.beta-service-title {
 		@include core-font(16);
 	}
+
+	@include media(mobile) {
+		margin-left: 14px;
+	}
 	
 }
 
